# homefront

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 0001_users.sql
backend/src/: auth.rs  config.rs  db.rs  ha.rs  main.rs  state.rs
backend/src/routes/: auth.rs  entities.rs  health.rs  mod.rs  setup.rs  ws.rs
docker/: Caddyfile
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/pages/: dashboard.rs  login.rs  mod.rs  setup.rs  tv.rs
frontend/src/stores/: auth.rs  entities.rs
