[package]
name = "homefront-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "homefront"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# HTTP client (for HA WebSocket/REST)
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tower / middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
