[package]
name = "homefront-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Location",
]}
gloo-net = { version = "0.5", features = ["http", "websocket"] }
gloo-storage = "0.3"
js-sys = "0.3"
